# RNNCPP

./: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  NOTES  README  README.md  STYLE  TODO  activations.cpp  activations.h  back_propagation.tex  dense_layer.cpp  dense_layer.h  derivatives.cpp  derivatives.tex  execute_tests.go  forward_euler_3.py  gmm.tex  gmm_layer.cpp  gmm_layer.h  layers.cpp  layers.h  lstm_layer.cpp  lstm_layer.h  main.cpp  make_test_program.py  model.cpp  model.h  optimizer.cpp  plotgraph.py  plotsine.py  stats.py  template_for_cpp_code.txt  test_recurrent_model1.cpp  test_recurrent_model2.cpp  test_recurrent_model3.cpp  test_recurrent_model4.cpp  test_recurrent_model5.cpp  test_recurrent_model_bias2.cpp  (+4 more)
scripts/: go  (+19 more)
src/: CMakeLists.txt  activations.cpp  connection.cpp  dense_layer.cpp  gmm_layer.cpp  input.cpp  input_layer.cpp  layers.cpp  lstm_layer.cpp  main.cpp  model.cpp  objective.cpp  optimizer.cpp  out_layer.cpp  print_utils.cpp  recurrent_layer.cpp  weights.cpp
tests/: CMakeLists.txt  common.cpp  common.h  test_activations.cpp
tests/activations/: CMakeLists.txt  activations.cpp
tests/categorical_classification/: CMakeLists.txt  categorical_classification.cpp  keras_classification.py
tests/char-rnn/: CMakeLists.txt  char-rnn.cpp
tests/copy_constructors/: CMakeLists.txt  copy_constructors.cpp
tests/debug_bias1/: CMakeLists.txt  debug_bias1.cpp
tests/feedforward/: CMakeLists.txt  one_layer_feedforward.cpp
tests/gmm1d/: CMakeLists.txt  gmm1d.cpp
tests/input/: CMakeLists.txt  bug.cpp  input.cpp  test.csv
tests/softmax/: CMakeLists.txt  softmax.cpp
tests/softmax_rec1/: CMakeLists.txt  softmax_rec1.cpp
tests/test_diff_eq1/: CMakeLists.txt  test_diff_eq1.cpp
tests/test_diff_eq2/: CMakeLists.txt  test_diff_eq2.cpp
tests/test_diff_eq3/: CMakeLists.txt  test_diff_eq3.cpp
tests/test_diff_eq4/: CMakeLists.txt  testDiffEq4.h  testDiffEq6.h  test_diff_eq4.cpp
tests/test_diff_eq5/: CMakeLists.txt  test_diff_eq5.cpp
tests/test_diff_eq6/: CMakeLists.txt  test_diff_eq6.cpp
tests/test_diff_eq7/: CMakeLists.txt  test_diff_eq7.cpp
tests/test_recurrent_model1/: CMakeLists.txt  test_recurrent_model1.cpp
tests/test_recurrent_model2/: CMakeLists.txt  test_recurrent_model2.cpp
tests/test_recurrent_model3/: CMakeLists.txt  test_recurrent_model3.cpp
tests/test_recurrent_model3.cpp/: CMakeLists.txt
tests/test_recurrent_model4/: CMakeLists.txt  test_recurrent_model4.cpp
tests/test_recurrent_model4.cpp/: CMakeLists.txt
tests/test_recurrent_model5/: CMakeLists.txt  test_recurrent_model5.cpp
tests/test_recurrent_model5.cpp/: CMakeLists.txt
tests/test_recurrent_model_bias1/: CMakeLists.txt  test_recurrent_model_bias1.cpp
tests/test_recurrent_model_bias2/: CMakeLists.txt  test_recurrent_model_bias2.cpp
tests/test_recurrent_model_bias5/: CMakeLists.txt  (+1 more)
(+27 files in other folders)
